--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
     },
     "extends": [
         "plugin:react/recommended",
-        "standard",
+        "airbnb",
         "plugin:react-hooks/recommended",
         "plugin:prettier/recommended"
     ],
